Category resource
Added categories, intended as an admin only resource to access the categories on the site and make edits/delete.

added logic to getall products to enable category_id query parameter as it is a filter
